--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,7 @@
 
     <!-- Label for editor overflow menu option that deletes the current fruit -->
     <string name="action_delete">Delete</string>
+    <string name="btn_order">Order</string>
+    <string name="btn_load_image">load image</string>
 
 </resources>
