Content Resolver add with query and insert methods Image Uri added to the text view on CatalogActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,7 @@
     <string name="action_delete">Delete</string>
     <string name="btn_order">Order</string>
     <string name="btn_load_image">load image</string>
+    <string name="editor_insert_pet_failed">Pet insertion failed</string>
+    <string name="editor_insert_pet_successful">Pet inserted</string>
 
 </resources>
